--- a/style/category.css
+++ b/style/category.css
@@ -379,7 +379,7 @@ html, body {
         border-radius: 8px;
         max-width: 500px;
         width: 100%;
-        height: 500px;
+        height: 550px;
         display: flex;
         justify-content: space-around;
         flex-direction: column;
@@ -403,6 +403,10 @@ html, body {
         display: flex;
         justify-content: space-evenly;
         flex-direction: column;
+    }
+
+    .category-edit-popup-content-info-public {
+        margin-bottom: 20px;
     }
 
     .category-edit-popup-content-btn {
