--- a/style/food.css
+++ b/style/food.css
@@ -428,10 +428,13 @@ html, body {
     .food-edit-popup-content-info {
         max-width: 100%;
         width: 100%;
-        height: 90%;
+        height: 500px;
         display: flex;
         align-items: center;
         flex-direction: column;
+        overflow-y: auto;
+        margin-bottom: 20px;
+        padding: 0 10px 0 0;
     }
     
     .food-edit-close {
@@ -445,6 +448,7 @@ html, body {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        height: auto;
     }
     
     .food-edit-close:hover,
