--- a/style/login.css
+++ b/style/login.css
@@ -92,4 +92,18 @@ html, body {
     
 }
 
+.error-message {
+    color: red;
+    font-size: 14px;
+}
+
+.login input,
+.login button {
+    margin-bottom: 10px;
+}
+
+.login input:last-child {
+    margin-bottom: 20px;
+}
+
 
