--- a/style/user_menu.css
+++ b/style/user_menu.css
@@ -332,6 +332,11 @@ html, body {
         cursor: pointer;
     }
 
+    .error-message {
+        color: red;
+        font-size: 14px;
+    }
+
       
 
     
