--- a/style/category.css
+++ b/style/category.css
@@ -436,3 +436,8 @@ html, body {
         text-decoration: none;
         cursor: pointer;
     }
+
+    .error-message {
+        color: red;
+        font-size: 14px;
+    }
